--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <b><font color="#ff0000"><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>のホームページへようこそ!!</b><font>
+  <b><font color="#ff0000"><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a></font>のホームページへようこそ!!</b>
 </html>
