--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <html>
-  <b><font color="#ff0000"><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a></font><font color="000000">のホームページへようこそ!!</b></font>
+  <font size="3">
+  <b>
+    <font color="#ff0000">
+      <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>
+    </font><font color="000000">
+      のホームページへようこそ!!
+  </b>
+</font>
+  </font>
 </html>
