--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <font size="3">
-    <font color="#ff0000">
+    <font color=#1f99db">
       <b>
         <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">
           kouhei-1
