--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <html>
   <font size="7">
-    <font color=#1f99db">
+    <font color="#000000">
+      <!--
+      ここにウェルカムとか何とか入れるんですお。
+      -->
+    </font>
+    <font color="#1f99db">
       <b>
         <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">
         kouhei-1
         </a>
     </font>
     <font color="000000">
-      のホームページへようこそ!!
+      's profile
       </b>
     </font>
   </font>
