--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <font size="7">
     <font color="#000000">
       <!--
-      ここにウェルカムとか何とか入れるんですお。
+      ここにウェルカムとか何とか入れるんですよ。
       -->
     </font>
     <font color="#1f99db">
