--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
   <font size="7">
-    <font color="#000000">
+    <font color="Black">
       <!--
       ここにウェルカムとか何とか入れるんですよ。
       -->
     </font>
-    <font color="#1f99db">
+    <font color="light blue">
       <b>
         <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">
         kouhei-1
         </a>
     </font>
-    <font color="000000">
+    <font color="Black">
       's profile
       </b>
     </font>
