--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       ここにウェルカムとか何とか入れるんですよ。
       -->
     </font>
-    <font color="light blue">
+    <font color="blue">
       <b>
         <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">
         kouhei-1
@@ -18,4 +18,22 @@
       </b>
     </font>
   </font>
+  <br>
+  <font color="block">
+    <b>
+    <font size="3">
+      ABOUT ME:
+    <br>
+    </font>
+    <font size="1">
+      I am a scratcher.
+      My account is
+      <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">
+        kouhei-1
+      </a>
+      .
+      <br>
+      I'm 13 years old.
+      I'm from Japan.
+    </font>
 </html>
