--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     </font>
   </font>
   <br>
-  <font color="block">
+  <font color="black">
     <b>
     <font size="3">
       ABOUT ME:
     </b>
     <br>
-    </font>
+  </font>
+  <font color=black">
     <font size="2">
       I am a scratcher.
       My account is
