--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <b>
     <font size="3">
       ABOUT ME:
+    </font>
     </b>
     <br>
   </font>
@@ -38,4 +39,5 @@
       I'm 13 years old.
       I'm from Japan.
     </font>
+  </font>
 </html>
