--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
     </b>
     <br>
   </font>
-  <font color=black">
+  <font color="black">
     <font size="2">
       I am a scratcher.
+      <br>
       My account is
       <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">
         kouhei-1
@@ -37,6 +38,7 @@
       .
       <br>
       I'm 13 years old.
+      <br>
       I'm from Japan.
     </font>
   </font>
