--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
 <html>
+<head>
+</head>
+<body>
   <font size="7">
     <font color="Black">
       p{
@@ -43,4 +47,5 @@
       I'm from Japan.
     </font>
   </font>
+</body>
 </html>
