--- a/index.html
+++ b/index.html
@@ -1,36 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-  <font size="7">
-    <font color="Black">
-      p{
-      
-      }
-    </font>
-    <font color="blue">
-      <b>
-        <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">
-        kouhei-1
-        </a>
-      </b>
-    </font>
-    <font color="Black">
-      <b>
-      's homepage
-      </b>
-    </font>
-  </font>
-  <br>
-  <br>
-  <font color="black">
-    <b>
-    <font size="3">
-      ABOUT ME:
-    </font>
-    </b>
-    <br>
+  <head>
+  </head>
+  <body>
+    <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage  <br><br>
+    ABOUT ME:<br>
   </font>
   <font color="black">
     <font size="2">
