--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
   </head>
   <body>
-  <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage  <br><br>
+  <h1><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage</h1>
+  <br><br>
   ABOUT ME:<br>
   I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>I'm 13 years old.<br>I'm from Japan.
 </body>
