--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset = "utf-8">
     h1{
-    color: #ff4500
+      color: #ff4500
     }
   </head>
   <body>
