--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset = "utf-8">
-    h1{
-      color: #ff4500
-    }
+    <style>
+      h1{
+        color: #ff4500
+      }
+    </style>
   </head>
   <body>
   <h1><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage</h1>
