--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset = "utf-8">
     <style>
       h1{
-        color: #ff4500
+        color: #ff4500;
+      font-family: sans-serif;
+      font-size: 50px;
       }
-      font-family: sans-serif
     </style>
   </head>
   <body>
