--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         color: #ff4500;
       font-family: sans-serif;
       font-size: 50px;
+      font-weight: bald;
       }
     </style>
   </head>
