--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <style>
       h1{
         color: #ff4500;
-      font-family: sans-serif;
-      font-size: 50px;
-      font-weight: bald;
+        font-family: sans-serif;
+        font-size: 50px;
+        font-weight: bald;
+      }
+      a{
+        color: #00bfff;
+        font-family: serif;
       }
     </style>
   </head>
