--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         font-weight: bald;
       }
       a{
-        color: #00bfff;
+        color: #1e90ff;
         font-family: serif;
       }
     </style>
