--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         font-family: sans-serif;
         font-size: 50px;
         font-weight: bald;
+        background-color: ffffc1;
       }
       a{
         color: #1e90ff;
