--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
         color: #1e90ff;
         font-family: serif;
       }
+       h2{
+         font-size: 25px;
+         font-family: sans-serif;
+       }
     </style>
   </head>
   <body>
   <h1><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage</h1>
   <br><br>
-  ABOUT ME:<br>
+  <h2>ABOUT ME:</h2><br>
   I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>I'm 13 years old.<br>I'm from Japan.
 </body>
 </html>
