--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
        }
     </style>
   </head>
+  
   <body>
-  <h1><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage</h1>
-  <br><br>
-  <h2>ABOUT ME:</h2><br>
-  I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>I'm 13 years old.<br>I'm from Japan.
-</body>
+    <h1><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage</h1>
+    <br><br>
+    <h2>ABOUT ME:</h2><br>
+    I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>I'm 13 years old.<br>I'm from Japan.<br>
+    <br>
+    <h2>My projects</h2>
+    <!-- monospace -->
+  </body>
 </html>
