--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   
   <body>
-    <h1><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage</h1>
+    <div><h1><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage</h1></div>
     <br><br>
     <h2>ABOUT ME:</h2><br>
     I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>I'm 13 years old.<br>I'm from Japan.<br>
