--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
   <head>
     <meta charset = "utf-8">
     <style>
-      dev{
-        background-color: ffffc1;
-        height: 60px;
-        width: 250px
-      }
       h1{
         color: #ff4500;
         font-family: sans-serif;
@@ -26,7 +21,7 @@
   </head>
   
   <body>
-    <div><h1><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage</h1></div>
+    <h1><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage</h1>
     <br><br>
     <h2>ABOUT ME:</h2><br>
     I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>I'm 13 years old.<br>I'm from Japan.<br>
