--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         font-family: sans-serif;
         font-size: 50px;
         font-weight: bald;
-        back-ground color: aqua;
+        background-color: aqua;
       }
       a{
         color: #1e90ff;
