--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>I'm 13 years old.<br>I'm from Japan.<br>
     <br>
     <h2>My projects</h2>
-    <p class=code></p>
-    <!-- monospace -->
+    <p class=code>kouhei-1</p>
   </body>
 </html>
