--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         color: #1e90ff;
         font-family: serif;
       }
-       h2{
+      h2{
          font-size: 25px;
          font-family: sans-serif;
-       }
+      }
+      .code{
+        font-family: Sans-Mono;
+      }
     </style>
   </head>
   
