--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>I'm 13 years old.<br>I'm from Japan.<br>
     <br>
     <h2>My projects</h2>
-    <p class=code>kouhei-1</p>
     <br>
+    <h3> 私の作成中の作品</h3>
     <iframe src="https://scratch.mit.edu/projects/868951125/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </body>
 </html>
