--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         font-size: 50px;
         font-weight: bald;
         background-color: skyblue;
+        text-align: Center;
       }
       a{
         color: #1e90ff;
