--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     <h2>My projects</h2>
     <br>
     <h3> 私の作成中の作品</h3>
-    <iframe src="https://scratch.mit.edu/projects/868951125/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe src="https://scratch.mit.edu/projects/868951125/embed" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </body>
 </html>
