--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     <iframe src="https://scratch.mit.edu/projects/868951125/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <br><br><br>
     <h3> 私の興味深い作品</h3>
-    <iframe src="https://scratch.mit.edu/projects/914109835/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe src="https://scratch.mit.edu/projects/914109835/embed?turbo" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </body>
 </html>
