--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
     <h3> 私の作成中の作品</h3>
     <iframe src="https://scratch.mit.edu/projects/868951125/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <br><br><br>
+    <h2>お問い合わせ</h2>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfaxqDOuteAxl78Kz5BtrHZLJEzgglG5P1pz1okjrtiMrZWHg/viewform?embedded=true" width:100% height:50% frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
   </body>
 </html>
