--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
 <html>
-<iframe src="https://scratch.mit.edu/projects/914109835/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  <head>
+    <meta charset = "utf-8">
+  </head>
+
+  <body>
+    <h2>コラッツ予想の収束を計算します</h2>
+    <iframe src="https://scratch.mit.edu/projects/914109835/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  </body>
 </html>
