--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <meta charset = "utf-8">
+    
+    h2{
+    font-size: 20px
+    font-family: sans-serif;
+    }
   </head>
 
   <body>
