--- a/inquiry.html
+++ b/inquiry.html
@@ -1,5 +1,12 @@
-
+<!DOCTYPE html>
 <html>
+  <head>
+    h2{
+    font-size:25px;
+    font-family:sans-serif;
+    }
+  </head>
+  
   <body>
     <h2>お問い合わせ</h2>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfaxqDOuteAxl78Kz5BtrHZLJEzgglG5P1pz1okjrtiMrZWHg/viewform?embedded=true" width = "800" height = "600" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
