--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
          font-size: 25px;
          font-family: sans-serif;
       }
-      .code{
-        font-family: Sans-Mono;
+      .under_bar{
+        background-color: black;
+        color: #ffffff;
       }
     </style>
   </head>
@@ -36,5 +37,6 @@
     <h3> 私の作成中の作品</h3>
     <iframe src="https://scratch.mit.edu/projects/868951125/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <br><br><br>
+    <h1 class="under_bar"></h1>
   </body>
 </html>
