--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     <h3> 私の作成中の作品</h3>
     <iframe src="https://scratch.mit.edu/projects/868951125/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <br><br><br>
-    <h1 class="under_bar"><a href="" target="_blank">お問い合わせ</a></h1>
+    <h1 class="under_bar"><a href="inquiry.html">お問い合わせ</a></h1>
   </body>
 </html>
