--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       .under_bar{
         background-color: black;
         color: #ffffff;
+        font-size: 10px;
+        text-align: left;
+        font-family: sans-serif
       }
     </style>
   </head>
