--- a/inquiry.html
+++ b/inquiry.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html><meta charset = "utf-8">
   <head>
-    h2{
-    font-size:25px;
-    font-family:sans-serif;
-    }
+    <style>
+      h2{
+      font-size:25px;
+      font-family:sans-serif;
+      }
+    </style>
   </head>
   
   <body>
