--- a/inquiry.html
+++ b/inquiry.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html><meta charset = "utf-8">
+<html>
   <head>
+    <meta charset = "utf-8">
     <style>
       h2{
       font-size:25px;
