--- a/inquiry.html
+++ b/inquiry.html
@@ -4,13 +4,18 @@
     <meta charset = "utf-8">
     <style>
       h2{
-      font-size:25px;
-      font-family:sans-serif;
+        font-size:25px;
+        font-family:sans-serif;
+      }
+      h3{
+        font-family: sans-serif
+        background-color: #ffffff;
       }
     </style>
   </head>
   
   <body>
+    <h3><a href = "index.html">ホーム</h3>
     <h2>お問い合わせ</h2>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfaxqDOuteAxl78Kz5BtrHZLJEzgglG5P1pz1okjrtiMrZWHg/viewform?embedded=true" width = "800" height = "600" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
   </body>
