--- a/inquiry.html
+++ b/inquiry.html
@@ -9,7 +9,7 @@
       }
       h3{
         font-family: sans-serif
-        background-color: Black;
+        background-color: black;
       }
     </style>
   </head>
