--- a/inquiry.html
+++ b/inquiry.html
@@ -8,7 +8,7 @@
         font-family:sans-serif;
       }
       h3{
-        font-family: sans-serif
+        font-family: sans-serif;
         background-color: black;
       }
     </style>
