--- a/inquiry.html
+++ b/inquiry.html
@@ -10,6 +10,7 @@
       h3{
         font-family: sans-serif;
         background-color: black;
+        font-color: SkyBlue;
       }
     </style>
   </head>
