--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     <h3> 私の作成中の作品</h3>
     <iframe src="https://scratch.mit.edu/projects/868951125/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <br><br><br>
-    <h1 class="under_bar"><br><br>  <a href="inquiry.html">お問い合わせ</a><br><br> </h1>
+    <h1 class="under_bar"><br><br>  <a href="inquiry.html">お問い合わせ</a><br>  <a href="test.js">test File</a><br> </h1>
   </body>
 </html>
