--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset = "utf-8">
     <style>
-      h1{
+      .home_bar{
         color: #ff4500;
         font-family: sans-serif;
         font-size: 50px;
@@ -30,7 +30,7 @@
   </head>
   
   <body>
-    <h1><br><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage<br><br></h1>
+    <h1 class="home_bar"><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage</h1>
     <br><br>
     <h2>ABOUT ME:</h2><br>
     I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>I'm 13 years old.<br>I'm from Japan.<br>
