--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         font-size: 10px;
         text-align: left;
         font-family: sans-serif
-        margin: 50px 100%
+        margin: 10% 100%
       }
     </style>
   </head>
