--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         color: #ffffff;
         font-size: 10px;
         text-align: left;
-        font-family: sans-serif
-        margin: 10% 100%
+        font-family: sans-serif;
+        margin: 10% 100%;
       }
     </style>
   </head>
