--- a/inquiry.html
+++ b/inquiry.html
@@ -12,11 +12,14 @@
         background-color: black;
         font-color: SkyBlue;
       }
+      home{
+        color: #000000;
+      }
     </style>
   </head>
   
   <body>
-    <h3>  <a href = "index.html">ホーム</a></h3>
+    <h3 class="home">  <a href = "index.html">ホーム</a></h3>
     <h2>お問い合わせ</h2>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfaxqDOuteAxl78Kz5BtrHZLJEzgglG5P1pz1okjrtiMrZWHg/viewform?embedded=true" width = "800" height = "600" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
   </body>
