--- a/projects.html
+++ b/projects.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset = "utf-8">
-    
-    h2{
-    font-size: 20px
-    font-family: sans-serif;
-    }
+    <style>
+      h2{
+      font-size: 20px
+      font-family: sans-serif;
+      }
+    </style>
   </head>
 
   <body>
