--- a/projects.html
+++ b/projects.html
@@ -7,10 +7,13 @@
       font-size: 20px
       font-family: sans-serif;
       }
+      .home{
+      }
     </style>
   </head>
 
   <body>
+    <h3 class="home">  <a href = "index.html">ホーム</a></h3>
     <h2>コラッツ予想の収束を計算します</h2>
     <iframe src="https://scratch.mit.edu/projects/914109835/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </body>
