--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,13 @@
       font-size: 20px
       font-family: sans-serif;
       }
+      h3{
+        font-family: sans-serif;
+        background-color: black;
+        font-color: SkyBlue;
+      }
       .home{
+        color: #000000;
       }
     </style>
   </head>
