--- a/inquiry.html
+++ b/inquiry.html
@@ -12,7 +12,7 @@
         background-color: black;
         font-color: SkyBlue;
       }
-      home{
+      .home{
         color: #000000;
       }
     </style>
