--- a/inquiry.html
+++ b/inquiry.html
@@ -13,7 +13,7 @@
         font-color: SkyBlue;
       }
       .home{
-        color: #000000;
+        font-color: #000000;
       }
     </style>
   </head>
