--- a/inquiry.html
+++ b/inquiry.html
@@ -13,8 +13,9 @@
         font-color: SkyBlue;
       }
       .home{
-        font-color: #000000;
+        font-color: #ffffff;
       }
+      
     </style>
   </head>
   
