--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
         font-color: SkyBlue;
       }
       .home{
-        font-color: #000000;
+        font-color: #ffffff;
       }
     </style>
   </head>
