--- a/inquiry.html
+++ b/inquiry.html
@@ -15,6 +15,9 @@
       .home a{
         font-color: #ffffff;
       }
+      a{
+        color: #1e90ff;
+      }
       
     </style>
   </head>
