--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,10 @@
       .home{
         font-color: #ffffff;
       }
+      a{
+        color: #1e90ff;
+      }
+      
     </style>
   </head>
 
