--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         text-align: Center;
       }
       a{
-        color: #1e90ff;
+        color: #000000;
       }
       h2{
          font-size: 25px;
