--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         text-align: Center;
       }
       a{
+        .home_url{
+          color:blue;
+        }else{
         color: #000000;
+        }
       }
       h2{
          font-size: 25px;
@@ -29,7 +33,7 @@
   </head>
   
   <body>
-    <h1 class="home_bar"><a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage</h1>
+    <h1 class="home_bar"><a class="home_url" href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage</h1>
     <br><br>
     <h2>ABOUT ME:</h2><br>
     I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>I'm 13 years old.<br>I'm from Japan.<br>
