--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
         text-align: Center;
       }
       a{
+        color:black;
+        
         .home_url{
           color:blue;
-        }else{
-        color: #000000;
-        }
       }
       h2{
          font-size: 25px;
