--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         text-align: Center;
       }
       a{
-        color:black;
-        
         .home_url{
-          color:blue;
+          font-color:blue;
+        }
+        .under_url{
+          font-color:blue;
         }
       }
       h2{
@@ -43,6 +44,6 @@
     <h3> 私の作成中の作品</h3>
     <iframe src="https://scratch.mit.edu/projects/868951125/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <br><br><br>
-    <h1 class="under_bar"><br><a href="inquiry.html">お問い合わせ</a><br><a href="projects.html">scratch projects</a><br><br></h1>
+    <h1 class="under_bar"><br><a class="under_url" href="inquiry.html">お問い合わせ</a><br><a href="projects.html">scratch projects</a><br><br></h1>
   </body>
 </html>
