--- a/inquiry.html
+++ b/inquiry.html
@@ -16,7 +16,7 @@
         font-color: #ffffff;
       }
       a{
-        color: #1e90ff;
+        font-color: #1e90ff;
       }
       
     </style>
