--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         text-align: Center;
       }
       a{
+        font-color: sky
         .home_url{
           font-color:blue;
         }
