--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         text-align: Center;
       }
       a{
-        font-color: sky
+        font-color: #1e90ff;
         .home_url{
           font-color:blue;
         }
