--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         text-align: Center;
       }
       a{
-        font-color: #1e90ff;
+        font-color: #1e90ff
         .home_url{
-          font-color:blue;
+          font-color: blue;
         }
         .under_url{
-          font-color:blue;
+          font-color: blue;
         }
       }
       h2{
@@ -26,7 +26,7 @@
       }
       .under_bar{
         background-color: black;
-        color: #ffffff;
+        font-color: #ffffff;
         font-size: 10px;
         text-align: left;
         font-family: sans-serif;
