--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
         text-align: Center;
       }
       a{
-        .home_url{
-          font-color: blue;
-        }
-        .under_url{
-          font-color: blue;
-        }
+        font-color: #1e90ff;
       }
       h2{
          font-size: 25px;
