--- a/inquiry.html
+++ b/inquiry.html
@@ -12,11 +12,8 @@
         background-color: black;
         font-color: SkyBlue;
       }
-      .home a{
-        font-color: #ffffff;
-      }
       a{
-        font-color: #1e90ff;
+        font-color: #000000;
       }
       
     </style>
