--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         background-color: skyblue;
         text-align: Center;
       }
-      a{
-        font-color: #1e90ff;
+      .under_url{
+        font-color: #000000;
+      }
+      .home_url{
+        font-color: blue;
       }
       h2{
          font-size: 25px;
