--- a/inquiry.html
+++ b/inquiry.html
@@ -13,7 +13,7 @@
         font-color: SkyBlue;
       }
       a{
-        font-color: #000000;
+        font-color: #ffffff;
       } 
     </style>
   </head>
