--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     <h3> 私の作成中の作品</h3>
     <iframe src="https://scratch.mit.edu/projects/868951125/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <br><br><br>
-    <h1 class="under_bar"><br><a class="under_url" href="inquiry.html">お問い合わせ</a><br><a href="projects.html">scratch projects</a><br><br></h1>
+    <h1 class="under_bar"><br><a class="under_url" href="inquiry.html">お問い合わせ</a><br><a class="under_url" href="projects.html">scratch projects</a><br><br></h1>
   </body>
 </html>
