--- a/tours/test.html
+++ b/tours/test.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    
+  </head>
+  <body>
+    <script>
+      console.log(Date.now())
+    </script>
+  </body>
+</html>
 
