--- a/tours/test.html
+++ b/tours/test.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <span id="text"></span>
+    <span id="Time"></span>
     <script type="text/javascript">
-        document.getElementById("text").innerHTML = showTime();
-
+        document.getElementById("Time").innerHTML = "Time: "+showTime();
         function showTime() {
             var now = new Date();
             var nowhour = now.getHours();
@@ -13,6 +12,10 @@
             var text = nowhour + ":" + nowminutes + ":" + nowseconds;
             return text;
         }
+    </script>
+    <span id="Date"></span>
+    <script type="text/javascript">
+        document.getElementById("Date").innerHTML = "Unixtime: " + Date.now();
     </script>
 </body>
 </html>
