--- a/tours/test.html
+++ b/tours/test.html
@@ -12,7 +12,7 @@
             var text = nowhour + ":" + nowminutes + ":" + nowseconds;
             return text;
         }
-    </script>
+    </script><br>
     <span id="Date"></span>
     <script type="text/javascript">
         document.getElementById("Date").innerHTML = "Unixtime: " + Date.now();
