--- a/tours/test.html
+++ b/tours/test.html
@@ -15,7 +15,7 @@
     </script><br>
     <span id="Date"></span>
     <script type="text/javascript">
-        document.getElementById("Date").innerHTML = "Unixtime: " + Date.now();
+        document.getElementById("Date").innerHTML = "Unixtime: " + Date.now()/100;
     </script>
 </body>
 </html>
