--- a/tours/Gemini_cr.html
+++ b/tours/Gemini_cr.html
@@ -10,7 +10,7 @@
       var hours = now.getHours();
       var minutes = now.getMinutes();
       var seconds = now.getSeconds();
-      var text = hours + ":" + minutes + ":" + seconds;
+      var text = hours.padStart(2, "0") + ":" + minutes.padStart(2, "0") + ":" + seconds.padStart(2, "0");
       document.getElementById("Time").innerHTML = "Time: " + text;
     }
 
@@ -19,8 +19,8 @@
       document.getElementById("Date").innerHTML = "Unixtime: " + unixTime.toFixed(3);
     }
 
-    setInterval(showTime, 1);
-    setInterval(Unixtime_script, 1);
+    setInterval(showTime, 1000);
+    setInterval(Unixtime_script, 3);
   </script>
 </body>
 </html>
