--- a/tours/Gemini_cr.html
+++ b/tours/Gemini_cr.html
@@ -10,7 +10,7 @@
       var hours = now.getHours();
       var minutes = now.getMinutes();
       var seconds = now.getSeconds();
-      var text = hours.padStart(2, "0") + ":" + minutes.padStart(2, "0") + ":" + seconds.padStart(2, "0");
+      var text = hours.slice(-2) + ":" + minutes.slice(-2) + ":" + seconds.slice(-2);
       document.getElementById("Time").innerHTML = "Time: " + text;
     }
 
