--- a/tours/Gemini_cr.html
+++ b/tours/Gemini_cr.html
@@ -11,7 +11,8 @@
       var hours = ("0"+now.getHours()).slice(-2);
       var minutes = ("0"+now.getMinutes()).slice(-2);
       var seconds = ("0"+now.getSeconds()).slice(-2);
-      var text = hours + ":" + minutes + ":" + seconds;
+      var after_decimal = ((Date.now()%1000/1000).toFixed(3)).slice(-4)
+      var text = hours + ":" + minutes + ":" + seconds+after_decimal;
       document.getElementById("Time").innerHTML = "Time: " + text;
     }
 
@@ -20,8 +21,8 @@
       document.getElementById("Date").innerHTML = "Unixtime: " + unixTime.toFixed(3);
     }
 
-    setInterval(showTime, 1000);
-    setInterval(Unixtime_script, 3);
+    setInterval(showTime, 17);
+    setInterval(Unixtime_script, 13);
   </script>
 </body>
 </html>
