--- a/inquiry.html
+++ b/inquiry.html
@@ -21,6 +21,6 @@
   <body>
     <h3 class="home">  <a href = "index.html">ホーム</a></h3>
     <h2>お問い合わせ</h2>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfaxqDOuteAxl78Kz5BtrHZLJEzgglG5P1pz1okjrtiMrZWHg/viewform?embedded=true" width = "800" height = "600" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+    <a href="Scratch.mit.edu/users/kouhei-1">私のScratchプロフィール</a>までお問い合わせ願います。
   </body>
 </html>
