--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     <h1 class="home_bar"><a class="home_url" href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage</h1>
     <br><br>
     <h2>ABOUT ME:</h2><br>
-    I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>I'm 13 years old.<br>I'm from Japan.<br>
-    <br>
+    I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>
     <h2>My projects</h2>
     <br>
     <h3> 私の作成中の作品</h3>
