--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         text-align: Center;
       }
       .under_url{
-        font-color: #000000;
+        font-color: White;
       }
       .home_url{
         font-color: blue;
