--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     <br>
     <h3> 私の作成中の作品</h3>
     <iframe src="https://scratch.mit.edu/projects/914096393/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>    <br><br><br>
-    <h1 class="under_bar"><br><a class="under_url" href="inquiry.html">お問い合わせ</a><br><a class="under_url" href="projects.html">scratch projects</a><br><a class="under_url href="Tools/Tool_index.html">Tools</a><br><br></h1>
+    <h1 class="under_bar"><br><a class="under_url" href="inquiry.html">お問い合わせ</a><br><a class="under_url" href="projects.html">scratch projects</a><br><a class="under_url href="https://kouhei-1.github.ioTools/Tool_index.html">Tools</a><br><br></h1>
   </body>
 </html>
