--- a/Tools/Tool_index.html
+++ b/Tools/Tool_index.html
@@ -2,6 +2,6 @@
 <html>
   <body>
      <h1>Tools</h1>
-     <a href="Tools/Time.html">Time</a>
+     <a href="./Time.html">Time</a>
   </body>
 </html>
