--- a/Tools/Tool_index.html
+++ b/Tools/Tool_index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
+     <a href=".././index.html">ホーム</a>
      <h1>Tools</h1>
      <a href="./Time.html">Time</a>
   </body>
