--- a/Tools/Time.html
+++ b/Tools/Time.html
@@ -9,11 +9,14 @@
       //("0"+num).slice(-2)
       function showTime() {
         var now = new Date();
+        var year = now.getFullYear();
+        var month = ("0"+now.getMonth()).slice(-2);
+        var date = ("0"+now.getDate()).slice(-2);
         var hours = ("0"+now.getHours()).slice(-2);
         var minutes = ("0"+now.getMinutes()).slice(-2);
         var seconds = ("0"+now.getSeconds()).slice(-2);
         var after_decimal = ((Date.now()%1000/1000).toFixed(3)).slice(-4)
-        var text = hours + ":" + minutes + ":" + seconds+after_decimal;
+        var text = year+"/"+month+"/"+date+" " + hours + ":" + minutes + ":" + seconds+after_decimal;
         document.getElementById("Time").innerHTML = "Time: " + text;
       }
 
