--- a/Test_file/Time_test.html
+++ b/Test_file/Time_test.html
@@ -40,6 +40,7 @@
       }
 
       setInterval(showTime, 17);
+      setInterval(UTCTime, 13);
       setInterval(Unixtime_script, 13);
     </script>
   </body>
