--- a/Tools/Tool_index.html
+++ b/Tools/Tool_index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html>
   <body>
-     <a href=".././index.html">ホーム</a>
+     <a href=".././index.html">Home</a>
      <h1>Tools</h1>
      <a href="./Time.html">Time</a>
   </body>
