--- a/Tools/Time.html
+++ b/Tools/Time.html
@@ -2,6 +2,9 @@
 <meta charset="utf-8">
 <html>
   <body>
+    <a href="./Tool_index.html">Tool_index</a>
+    <h1>Time</h1>
+    
     <span id="Local_time"></span><br>
     <span id="UTC_time"></span><br>
     <span id="Unixtime"></span>
