--- a/Tools/Time.html
+++ b/Tools/Time.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html>
   <body>
-    <a href="./Tool_index.html">Tool_index</a>
+    <a href="./Tools.html">Tool_index</a>
     <h1>Time</h1>
     
     <span id="Local_time"></span><br>
