--- a/Tools/Time.html
+++ b/Tools/Time.html
@@ -8,6 +8,7 @@
     <span id="Local_time"></span><br>
     <span id="UTC_time"></span><br>
     <span id="Unixtime"></span>
+    <span id="Unixbinary"</span>
 
     <script type="text/javascript">
       //("0"+num).slice(-2)
@@ -40,6 +41,7 @@
       function Unixtime_script() {
         var unixTime = Date.now() / 1000;
         document.getElementById("Unixtime").innerHTML = "Unixtime: " + unixTime.toFixed(3);
+        document.getElementById("Unixbinary").innerHTML = "Unixbinary: " + (unixTime.toString(2)).toFixed(3);
       }
 
       setInterval(showTime, 17);
