--- a/Tools/Time.html
+++ b/Tools/Time.html
@@ -8,7 +8,7 @@
     <span id="Local_time"></span><br>
     <span id="UTC_time"></span><br>
     <span id="Unixtime"></span>
-    <span id="Unixbinary"</span>
+    <span id="Unixbinary"></span>
 
     <script type="text/javascript">
       //("0"+num).slice(-2)
