--- a/Tools/Time.html
+++ b/Tools/Time.html
@@ -7,7 +7,7 @@
     
     <span id="Local_time"></span><br>
     <span id="UTC_time"></span><br>
-    <span id="Unixtime"></span>
+    <span id="Unixtime"></span><br>
     <span id="Unixbinary"></span>
 
     <script type="text/javascript">
