--- a/Tools/Time.html
+++ b/Tools/Time.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <html>
+  <head>
+    <title>kouhei-1 - Time</title>
+  </head>
   <body>
     <a href="./Tool_index.html">Tools</a>
     <h1>Time</h1>
