--- a/Tools/Tool_index.html
+++ b/Tools/Tool_index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <html>
+  <head>
+    <title>kouhei-1 - Tools</title>
+  </head>
   <body>
      <a href=".././index.html">Home</a>
      <h1>Tools</h1>
