--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>kouhei-1 - top page</title>
     <meta charset = "utf-8">
     <style>
       .home_bar{
