--- a/Tools/Time_display.html
+++ b/Tools/Time_display.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<meta charset="utf-8">
+<html>
+  <head>
+    <title>kouhei-1 - Timer</title>
+  </head>
+  <body>
+    <h1><span id="Local_time"></span></h1>
+    <script type="text/javascript">
+      //("0"+num).slice(-2)
+      function showTime() {
+        var now = new Date();
+        var year = now.getFullYear();
+        var month = ("0"+now.getMonth()).slice(-2);
+        var date = ("0"+now.getDate()).slice(-2);
+        var hours = ("0"+now.getHours()).slice(-2);
+        var minutes = ("0"+now.getMinutes()).slice(-2);
+        var seconds = ("0"+now.getSeconds()).slice(-2);
+        var after_decimal = ((Date.now()%1000/1000).toFixed(3)).slice(-4)
+        var text = year+"/"+month+"/"+date+" " + hours + ":" + minutes + ":" + seconds+after_decimal;
+        document.getElementById("Local_time").innerHTML = "Local_time: " + text;
+      }
+      setInterval(showTime, 17);
+    </script>
+  </body>
+</html>
