--- a/Tools/Time_display.html
+++ b/Tools/Time_display.html
@@ -3,6 +3,11 @@
 <html>
   <head>
     <title>kouhei-1 - Timer</title>
+    <style>
+      h1{
+        font-size: 1em;
+      }
+    </style>
   </head>
   <body>
     <h1><span id="Local_time"></span></h1>
@@ -18,7 +23,7 @@
         var seconds = ("0"+now.getSeconds()).slice(-2);
         var after_decimal = ((Date.now()%1000/1000).toFixed(3)).slice(-4)
         var text = year+"/"+month+"/"+date+" " + hours + ":" + minutes + ":" + seconds+after_decimal;
-        document.getElementById("Local_time").innerHTML = "Local_time: " + text;
+        document.getElementById("Local_time").innerHTML = text;
       }
       setInterval(showTime, 17);
     </script>
