--- a/Tools/Time_display.html
+++ b/Tools/Time_display.html
@@ -5,7 +5,7 @@
     <title>kouhei-1 - Timer</title>
     <style>
       h1{
-        font-size: 1em;
+        font-size: 100px;
       }
     </style>
   </head>
