--- a/Tools/Time_display.html
+++ b/Tools/Time_display.html
@@ -6,6 +6,7 @@
     <style>
       h1{
         font-size: 100px;
+        text-align: center;
       }
     </style>
   </head>
@@ -22,7 +23,8 @@
         var minutes = ("0"+now.getMinutes()).slice(-2);
         var seconds = ("0"+now.getSeconds()).slice(-2);
         var after_decimal = ((Date.now()%1000/1000).toFixed(3)).slice(-4)
-        var text = year+"/"+month+"/"+date+" " + hours + ":" + minutes + ":" + seconds+after_decimal;
+        var text = year+"/"+month+"/"+date+`
+        `+ hours + ":" + minutes + ":" + seconds+after_decimal;
         document.getElementById("Local_time").innerHTML = text;
       }
       setInterval(showTime, 17);
