--- a/Tools/Time_display.html
+++ b/Tools/Time_display.html
@@ -7,7 +7,7 @@
       h1{
         font-size: 100px;
         text-align: center;
-        font-family: sans-serif;
+        font-family: メイリオ;
       }
     </style>
   </head>
