--- a/Tools/Time_display.html
+++ b/Tools/Time_display.html
@@ -8,10 +8,12 @@
         font-size: 100px;
         text-align: center;
         font-family: Sans;
+        font-color: White;
       }
     </style>
   </head>
   <body>
+    <body background= #ffffff>
     <h1><span id="Local_time"></span></h1>
     <script type="text/javascript">
       //("0"+num).slice(-2)
