--- a/Tools/Time_display.html
+++ b/Tools/Time_display.html
@@ -8,7 +8,7 @@
         font-size: 100px;
         text-align: center;
         font-family: Sans;
-        font-color: White;
+        color: White;
       }
     </style>
   </head>
