--- a/Tools/Time_display.html
+++ b/Tools/Time_display.html
@@ -10,10 +10,12 @@
         font-family: Sans;
         color: White;
       }
+      body {
+　　     background-color: Brack;
+      }
     </style>
   </head>
   <body>
-    <body background= #ffffff>
     <h1><span id="Local_time"></span></h1>
     <script type="text/javascript">
       //("0"+num).slice(-2)
