--- a/Tools/Time_display.html
+++ b/Tools/Time_display.html
@@ -11,7 +11,7 @@
         color: White;
       }
       body{
-　　     background-color: Brack;
+　　     background-color: Black;
       }
     </style>
   </head>
