--- a/Tools/Time_display.html
+++ b/Tools/Time_display.html
@@ -10,12 +10,9 @@
         font-family: Sans;
         color: White;
       }
-      body{
-　　     background-color: Black;
-      }
     </style>
   </head>
-  <body>
+  <body style="background-color: Black;">
     <h1><span id="Local_time"></span></h1>
     <script type="text/javascript">
       //("0"+num).slice(-2)
