--- a/Tools/UNIXtoTIME.html
+++ b/Tools/UNIXtoTIME.html
@@ -10,7 +10,7 @@
   <input type="number" id="Unix_form" name="name" required minlength="4" maxlength="8" size="10" />
   <script>
     document.getElementById("Unix_form").addEventListener("keydown", function(event) {
-      if (event.keyCode === 13) {
+      if (event.keyCode == 13) {
         var Unix_time = document.getElementById("Unix_form").value;
         document.getElementById("UTC_time").innerHTML = Unix_time;
       }
