--- a/Tools/UNIXtoTIME.html
+++ b/Tools/UNIXtoTIME.html
@@ -2,18 +2,29 @@
 <html>
   <head>
     <style>
-      
     </style>
   </head>
-  
   <body>
     <input type="number" id="Unix_form" name="name" required minlength="4" maxlength="8" size="10" /><br>
-    UTCtime: <span id="UTC_time"></span>
+    UTC time: <span id="UTC_time"></span>
     <script>
+      function unixToUtc(unixTime) {
+        if (isNaN(unixTime) || unixTime < 0) {
+          return "Invalid Unix timestamp";
+        }
+        const date = new Date(unixTime * 1000);
+        return date.toISOString().replace(/\.\d+Z$/, 'Z');
+      }
+
       document.getElementById("Unix_form").addEventListener("keydown", function(event) {
-        if (event.keyCode == 13) {
-          var Unix_time = document.getElementById("Unix_form").value;
-          document.getElementById("UTC_time").innerHTML = unixToUtc(Unix_time);
+        if (event.keyCode === 13) {
+          const unixTime = document.getElementById("Unix_form").value;
+          const utcTime = unixToUtc(unixTime);
+          if (utcTime === "Invalid Unix timestamp") {
+            alert(utcTime);
+          } else {
+            document.getElementById("UTC_time").innerHTML = utcTime;
+          }
         }
       });
     </script>
