--- a/Tools/Tool_index.html
+++ b/Tools/Tool_index.html
@@ -8,5 +8,6 @@
      <a href=".././index.html">Home</a>
      <h1>Tools</h1>
      <a href="./Time.html">Time</a>
+     <a href="./UNIXtoTIME.html">UnixTime to UTCTime</a>
   </body>
 </html>
