--- a/Tools/Time_display.html
+++ b/Tools/Time_display.html
@@ -19,7 +19,7 @@
       function showTime() {
         var now = new Date();
         var year = now.getFullYear();
-        var month = ("0"+now.getMonth()).slice(-2);
+        var month = ("0"+(now.getMonth()+1)).slice(-2);
         var date = ("0"+now.getDate()).slice(-2);
         var hours = ("0"+now.getHours()).slice(-2);
         var minutes = ("0"+now.getMinutes()).slice(-2);
