--- a/Tools/Time_display.html
+++ b/Tools/Time_display.html
@@ -7,9 +7,9 @@
       h1{
         font-size: 100px;
         text-align: center;
-        font-family: sans-serif;
         color: White;
       }
+      @import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap')
     </style>
   </head>
   <body style="background-color: Black;">
