--- a/Tools/Tool_index.html
+++ b/Tools/Tool_index.html
@@ -5,9 +5,10 @@
     <title>kouhei-1 - Tools</title>
   </head>
   <body>
-     <a href=".././index.html">Home</a>
-     <h1>Tools</h1>
-     <a href="./Time.html">Time</a><br>
-     <a href="./UNIXtoTIME.html">UnixTime to UTCTime</a>
+    <a href=".././index.html">Home</a>
+    <h1>Tools</h1>
+    <a href="./Time.html">Time</a><br>
+    <a href="./UNIXtoTIME.html">UnixTime to UTCTime</a>
+    <a href="./Time_display.html">Time Display</a>
   </body>
 </html>
