--- a/Tools/Time_display.html
+++ b/Tools/Time_display.html
@@ -4,13 +4,11 @@
   <head>
     <title>kouhei-1 - Timer</title>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Roboto+Mono:ital,wght@0,100..700;1,
-      .h1{
-        font-family: "Roboto Mono", monospace;
-        font-style: normal;
-        color: White;
+      h1{
         font-size: 100px;
         text-align: center;
+        font-family: Verdana;
+        color: White;
       }
     </style>
   </head>
