--- a/Test_file/scratchapi_test.html
+++ b/Test_file/scratchapi_test.html
@@ -6,8 +6,9 @@
   <body>
     <span id="Api"></span>
     <script>
-      function getApi(){
-        fetch('https://api.scratch.mit.edu/users/AmatsuTatsu/')
+      get Api('https://api.scratch.mit.edu/users/AmatsuTatsu/')
+      function getApi(url){
+        fetch(url)
         .then(response => response.json())
         .then(data => {
         document.getElementById("Api").innerHTML = data
