--- a/Tools/ChangeExtension.html
+++ b/Tools/ChangeExtension.html
@@ -4,35 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Change File Extension</title>
+    <script>
+        function changeExtension() {
+            var fileInput = document.getElementById("file");
+            var newExtensionInput = document.getElementById("new_extension");
+            var file = fileInput.files[0];
+            var newExtension = newExtensionInput.value.trim();
+
+            if (file && newExtension) {
+                var oldExtension = file.name.split('.').pop();
+                var newFileName = file.name.replace("." + oldExtension, "." + newExtension);
+                
+                var link = document.createElement("a");
+                link.href = URL.createObjectURL(file);
+                link.download = newFileName;
+                document.body.appendChild(link);
+                link.click();
+                document.body.removeChild(link);
+            } else {
+                alert("Please select a file and enter a new extension.");
+            }
+        }
+    </script>
 </head>
 <body>
     <h2>Change File Extension</h2>
-    <form action="#" method="post" enctype="multipart/form-data">
-        <label for="file">Select file:</label><br>
-        <input type="file" id="file" name="file"><br><br>
-        <label for="new_extension">New Extension:</label><br>
-        <input type="text" id="new_extension" name="new_extension" placeholder="Enter new extension"><br><br>
-        <input type="submit" value="Change Extension">
-    </form>
-
-    <?php
-    if ($_SERVER["REQUEST_METHOD"] == "POST") {
-        $file = $_FILES["file"]["name"];
-        $new_extension = $_POST["new_extension"];
-
-        if ($file && $new_extension) {
-            $old_extension = pathinfo($file, PATHINFO_EXTENSION);
-            $new_file = str_replace($old_extension, $new_extension, $file);
-
-            if (rename($file, $new_file)) {
-                echo "<p>File extension changed successfully. New file name: $new_file</p>";
-            } else {
-                echo "<p>Error occurred while changing file extension.</p>";
-            }
-        } else {
-            echo "<p>Please select a file and enter a new extension.</p>";
-        }
-    }
-    ?>
+    <label for="file">Select file:</label><br>
+    <input type="file" id="file" name="file"><br><br>
+    <label for="new_extension">New Extension:</label><br>
+    <input type="text" id="new_extension" name="new_extension" placeholder="Enter new extension"><br><br>
+    <button onclick="changeExtension()">Change Extension</button>
 </body>
 </html>
