--- a/Tools/Tool_index.html
+++ b/Tools/Tool_index.html
@@ -10,5 +10,6 @@
     <a href="./Time.html">Time</a><br>
     <a href="./UNIXtoTIME.html">UnixTime to UTCTime</a><br>
     <a href="./Time_display.html">Time Display</a>
+    <a href="./ChangeExtension.html">Change the extension(Only ext.)</a>
   </body>
 </html>
