--- a/Tools/ChangeExtension.html
+++ b/Tools/ChangeExtension.html
@@ -28,6 +28,7 @@
     </script>
 </head>
 <body>
+    <a href="./Tool_index.html">Tools</a><br><br>
     <h2>Change File Extension</h2>
     <label for="file">Select file:</label><br>
     <input type="file" id="file" name="file"><br><br>
