--- a/Tools/Tool_index.html
+++ b/Tools/Tool_index.html
@@ -9,7 +9,7 @@
     <h1>Tools</h1>
     <a href="./Time.html">Time</a><br>
     <a href="./UNIXtoTIME.html">UnixTime to UTCTime</a><br>
-    <a href="./Time_display.html">Time Display</a>
+    <a href="./Time_display.html">Time Display</a><br>
     <a href="./ChangeExtension.html">Change the extension(Only ext.)</a>
   </body>
 </html>
