--- a/Tools/Tool_index.html
+++ b/Tools/Tool_index.html
@@ -10,6 +10,7 @@
     <a href="./Time.html">Time</a><br>
     <a href="./UNIXtoTIME.html">UnixTime to UTCTime</a><br>
     <a href="./Time_display.html">Time Display</a><br>
-    <a href="./ChangeExtension.html">Change the extension(Only ext.)</a>
+    <a href="./ChangeExtension.html">Change the extension(Only ext.)</a><br>
+    <a href="./Base64.html">Base64 encoder/decoder</a>
   </body>
 </html>
