--- a/Tools/Tool_index.html
+++ b/Tools/Tool_index.html
@@ -11,6 +11,7 @@
     <a href="./UNIXtoTIME.html">UnixTime to UTCTime</a><br>
     <a href="./Time_display.html">Time Display</a><br>
     <a href="./ChangeExtension.html">Change the extension(Only ext.)</a><br>
-    <a href="./Base64.html">Base64 encoder/decoder</a>
+    <a href="./Base64.html">Base64 encoder/decoder</a><br>
+    <a href="./UTF-8.html">UTF-8 encoder/decoder</a>
   </body>
 </html>
