--- a/Tools/Tool_index.html
+++ b/Tools/Tool_index.html
@@ -12,6 +12,6 @@
     <a href="./Time_display.html">Time Display</a><br>
     <a href="./ChangeExtension.html">Change the extension(Only ext.)</a><br>
     <a href="./Base64.html">Base64 encoder/decoder</a><br>
-    <a href="./UTF-8.html">UTF-8 encoder/decoder</a>
+    <a href="./test_encoder.html">text encoder/decoder</a>
   </body>
 </html>
